# beavercds-frontend

./: .gitignore  Dockerfile  Dockerfile.api  README.md  caddy.sh  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  setup.sh  test.json
.github/workflows/: container-build.yaml
account/: backends.py  forms.py  managers.py  models.py  urls.py  views.py
bctf/: asgi.py  context_processors.py  helm_settings.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
bctf-api/: asgi.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
chals/: apps.py  forms.py  mixins.py  models.py  urls.py  views.py
charts/: manifest.yaml
container-aux/: Caddyfile  entrypoint.sh
static/: client.js
templates/: 400.html  403.html  404.html  500.html  base.html  challenges.html  firstbloods.html  index.html  not_started.html  scoreboard.html
templates/registration/: login.html  profile.html  signup.html
